2026-01-31T01:29:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21536381593 # 863
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-31
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 13 34 / 14 36
* notice: next accum: outdated-unq outdated-all / unq all: 13 34 / 14 36
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-15] / []

2026-01-30T01:43:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21501355681 # 862
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 13 34 / 14 36
* notice: next accum: outdated-unq outdated-all / unq all: 13 34 / 14 36
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-14] / []

2026-01-29T01:42:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21462379537 # 861
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 13 34 / 13 34
* notice: next accum: outdated-unq outdated-all / unq all: 13 34 / 14 36
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-12-16 2025-12-17 2025-12-18 2025-12-19 2025-12-20 2025-12-21 2025-12-22 2025-12-23 2025-12-24 2025-12-25 2025-12-26 2025-12-27 2025-12-28 2025-12-29] / [2026-01-19]
