@@ -1,3 +1,12 @@
+2026-02-03T01:48:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21613555517 # 866
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-03
+* notice: last 14d: unq all: 1 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 13 34 / 14 36
+* notice: next accum: outdated-unq outdated-all / unq all: 13 34 / 14 36
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-16 2026-01-17 2026-01-18] / []
+
 2026-01-31T01:29:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21536381593 # 863
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-31
